--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -2,5 +2,8 @@
   "type": "PTE",
   "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main",
   "templateSha": "0af8feb4cf098ebec44278866877fc9aceff0513",
-  "gitHubRunner": "self-hosted"
+  "gitHubRunner": "self-hosted",
+  "DeployToCUSTOM": {
+    "EnvironmentName": "CICD_Prod"
+  }
 }
