environmentName set to local instanceName

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -12,6 +12,7 @@
   "DeployToOnPremTest": {
     "EnvironmentType": "OnPrem",
     "ContinuousDeployment": false,
-    "runs-on": "onprem"
+    "runs-on": "onprem",
+    "EnvironmentName": "bconprem23test"
   }
 }
