--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -12,6 +12,6 @@
   "deployToOnPrem": {
     "EnvironmentType": "OnPrem",
     "ContinuousDeployment": true,
-    "runs-on": "OnPrem"
+    "runs-on": "groupm"
   }
 }
