setting: artifact version

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -13,5 +13,6 @@
     "EnvironmentType": "OnPrem",
     "ContinuousDeployment": true,
     "runs-on": "groupm"
-  }
+  },
+  "artifact": "latest"
 }
