--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -14,5 +14,6 @@
     "ContinuousDeployment": true,
     "runs-on": "groupm"
   },
-  "artifact": "latest"
+  "artifact": "*",
+  "versioningStrategy": 2
 }
