--- a/mephezar/boardgames/app.json
+++ b/mephezar/boardgames/app.json
@@ -28,5 +28,6 @@
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
   },
-  "runtime": "12.2"
+  "runtime": "12.2",
+  "target": "OnPrem"
 }
