--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -14,6 +14,6 @@
     "ContinuousDeployment": true,
     "runs-on": "groupm"
   },
-  "artifact": "//OnPrem/23.2.0.0/de/latest",
+  "artifact": "https://bcartifacts-exdbf9fwegejdqak.b02.azurefd.net/onprem/23.2.14098.14562/de",
   "versioningStrategy": 2
 }
