--- a/mephezar/boardgames/app.json
+++ b/mephezar/boardgames/app.json
@@ -28,5 +28,6 @@
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
   },
-  "target": "OnPrem"
+  "target": "OnPrem",
+  "runtime": "12.1"
 }
