--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -15,5 +15,6 @@
     "runs-on": "groupm"
   },
   "artifact": "/onprem/23.2.0.0/de/closest",
-  "versioningStrategy": 2
+  "versioningStrategy": 2,
+  "enableAppSourceCop": false
 }
