New Version number 1.2

--- a/mephezar/.AL-Go/settings.json
+++ b/mephezar/.AL-Go/settings.json
@@ -2,5 +2,6 @@
   "country": "de",
   "appFolders": [],
   "testFolders": [],
-  "bcptTestFolders": []
+  "bcptTestFolders": [],
+  "repoVersion": "1.2"
 }
